@@ -1,21 +1,3 @@
-package com.example.demo.controller;
-
-import com.example.demo.dto.AuthRequest;
-import com.example.demo.dto.AuthResponse;
-import com.example.demo.entity.User;
-import com.example.demo.repository.UserRepository;
-import com.example.demo.service.UserService;
-import com.example.demo.util.JwtUtil;
-import org.springframework.http.ResponseEntity;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.web.bind.annotation.*;
-
-import java.util.*;
-import java.util.stream.Collectors;
-
 @RestController
 @RequestMapping("/auth")
 public class AuthController {
@@ -35,50 +17,56 @@ public class AuthController {
         this.userRepo = userRepo;
     }
 
+    // ✅ REGISTER (TEST EXPECTED FORMAT)
     @PostMapping("/register")
-    public ResponseEntity<Map<String, Object>> register(@RequestBody Map<String, String> body) {
-        try {
-            User user = userService.registerUser(body);
-            Map<String, Object> response = new HashMap<>();
-            response.put("id", user.getId());
-            response.put("email", user.getEmail());
-            response.put("name", user.getName());
-            return ResponseEntity.ok(response);
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(Collections.singletonMap("error", e.getMessage()));
-        }
+    public ResponseEntity<?> register(@RequestBody AuthRequest req) {
+
+        // create user
+        User user = userService.register(req.getEmail(), req.getPassword(), req.getName());
+
+        Set<String> roles = user.getRoles()
+                .stream()
+                .map(r -> r.getName())
+                .collect(Collectors.toSet());
+
+        return ResponseEntity.ok(
+                Map.of(
+                        "id", user.getId(),
+                        "email", user.getEmail(),
+                        "roles", roles
+                )
+        );
     }
 
+    // ✅ LOGIN (DO NOT CHANGE SIGNATURE)
     @PostMapping("/login")
     public ResponseEntity<?> login(@RequestBody AuthRequest req) {
-        try {
-            Authentication authentication = authManager.authenticate(
-                    new UsernamePasswordAuthenticationToken(req.getEmail(), req.getPassword())
-            );
 
-            SecurityContextHolder.getContext().setAuthentication(authentication);
+        Authentication authentication = authManager.authenticate(
+                new UsernamePasswordAuthenticationToken(
+                        req.getEmail(),
+                        req.getPassword()
+                )
+        );
 
-            User user = userRepo.findByEmail(req.getEmail())
-                    .orElseThrow(() -> new RuntimeException("User not found"));
+        SecurityContextHolder.getContext().setAuthentication(authentication);
 
-            Set<String> roles = user.getRoles()
-                    .stream()
-                    .map(r -> r.getName())
-                    .collect(Collectors.toSet());
+        User user = userRepo.findByEmail(req.getEmail())
+                .orElseThrow(() -> new RuntimeException("User not found"));
 
-            String token = jwtUtil.generateToken(user.getEmail(), user.getId(), roles);
+        Set<String> roles = user.getRoles()
+                .stream()
+                .map(r -> r.getName())
+                .collect(Collectors.toSet());
 
-            return ResponseEntity.ok(new AuthResponse(token, user.getId(), user.getEmail(), roles));
+        String token = jwtUtil.generateToken(
+                user.getEmail(),
+                user.getId(),
+                roles
+        );
 
-        } catch (Exception e) {
-            return ResponseEntity.status(401).body(Collections.singletonMap("error", "Invalid credentials"));
-        }
+        return ResponseEntity.ok(
+                new AuthResponse(token, user.getId(), user.getEmail(), roles)
+        );
     }
 }
-
-
-
-
-
-
-
